tests/init/neg/cycle-structure.check
-- Error: tests/init/neg/cycle-structure.scala:3:13 --------------------------------------------------------------------
3 |    val x = B(this)   // error
  |            ^^^^^^^
  |            Problematic object instantiation: arg 1 is not hot. Calling trace:
  |            -> case class A(b: B) {	[ cycle-structure.scala:1 ]
  |               ^
  |            -> val x = B(this)   // error	[ cycle-structure.scala:3 ]
  |                       ^^^^^^^
  |
  |            It leads to the following error during object initialization:
  |            Access field value x on a cold object. Calling trace:
  |            -> case class B(a: A) {	[ cycle-structure.scala:7 ]
  |               ^
  |            -> val x1 = a.x	[ cycle-structure.scala:8 ]
  |                        ^^^
-- Error: tests/init/neg/cycle-structure.scala:9:13 --------------------------------------------------------------------
9 |    val x = A(this)   // error
  |            ^^^^^^^
  |            Problematic object instantiation: arg 1 is not hot. Calling trace:
  |            -> case class B(a: A) {	[ cycle-structure.scala:7 ]
  |               ^
  |            -> val x = A(this)   // error	[ cycle-structure.scala:9 ]
  |                       ^^^^^^^
  |
  |            It leads to the following error during object initialization:
  |            Access field value x on a cold object. Calling trace:
  |            -> case class A(b: B) {	[ cycle-structure.scala:1 ]
  |               ^
  |            -> val x1 = b.x	[ cycle-structure.scala:2 ]
  |                        ^^^
